fix navigation issues - remove settings menu add padding in content pane for all to fix menu alignment

--- a/solid/css/style.css
+++ b/solid/css/style.css
@@ -13,3 +13,7 @@ li.solid-app {
 .solid-permissions {
 	margin-bottom: 10px;
 }
+
+.solid-container {
+	padding: 10px 40px;
+}
